@@ -136,5 +136,11 @@ x5
 t(x5)
 unclass(x5)
 unclass(t(x5))
+
+## 0 and 1 row/col Mefa object
+x3[c(FALSE,FALSE,FALSE,FALSE),c(FALSE,FALSE,FALSE,FALSE)]
+x3[c(TRUE,FALSE,FALSE,FALSE),c(FALSE,FALSE,FALSE,FALSE)]
+x3[c(FALSE,FALSE,FALSE,FALSE),c(TRUE,FALSE,FALSE,FALSE)]
+x3[c(TRUE,FALSE,FALSE,FALSE),c(TRUE,FALSE,FALSE,FALSE)]
 }
 \keyword{ manip }
